client/public/views/styles/homepage.css
:root {
  --accent: D9D0C7;
  --background: #f4f3f7;
  --text: #2c2c2c;
}

@import url('https://fonts.googleapis.com/css2?family=Baloo+Bhaijaan+2&display=swap');

body {
  color: #2c2c2c;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  height: 100%;
  margin: 0;
  overflow: auto;
  padding: 0;
  scroll-snap-type: y mandatory;
  width: 100%;
}

body p {
  font-family: 'Baloo Bhaijaan 2', sans-serif;
}

.dark body {
  color: white;
}

html {
  height: 100%;
  overflow: hidden;
  scroll-snap-align: start;
  scroll-snap-type: y mandatory;
  width: 100%;
}

.boxContainer {
  animation: slideUp 2.5s ease-out forwards 1.5s;
  box-shadow: 5px 5px 15px 0.5rem rgb(53, 53, 53);
  display: flex;
  flex-direction: column;
  font-size: 65px;
  z-index: 1;
}

.container {
  width: 90vw;
  margin-right: 5%;
}

.containerLeft,
.containerRight {
  display: flex;
  flex-direction: column;
}

.containerLeft {
  /* align-content: space-around; */
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 25%;
}

.containerMain {
  display: flex;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  height: 80vh;
  width: 90vw;
}

.containerRight {
  align-items: center;
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: center;
  visibility: hidden;
  width: 70%;
}

.floater {
  align-items: center;
  display: flex;
  font-size: 2.5rem;
  justify-content: flex-end;
  padding-right: 20px;
  position: fixed;
  right: 10px;
  top: 15px;
  z-index: 10;
}

.instruction {
  align-items: center;
  background-color: var(--background);
  border-radius: 2px;
  box-shadow: 3px 5px 5px -3px rgba(44, 44, 44, 1);
  color: var(--text);
  cursor: pointer;
  /* display: flex; */
  /* flex: 1; */
  font-size: large;
  font-weight: bolder;
  height: 100%;
  justify-content: center;
  margin-bottom: 5%;
  padding-right: 10px;
  /* padding-bottom: 5px; */
  /* text-align: center; */
  transition: transform 250ms ease;
  width: 100%;
}

.instruction.active {
  font-size: x-large;
  /* align-items: flex-start;
  justify-content: flex-start; */
}

.instructiontext {
  font-size: large;
  display: none;
}

.instructiontext.active {
  display: block;
}

.instruction:hover {
  transform: translateY(-5px);
}

.link-container {
  display: flex;
  gap: 10px;
  justify-content: center;
}

.logo,
.logo2,
.logo3 {
  filter: drop-shadow(2px 2px 3px #2a2a2a);
}

.logo {
  animation: rotate-in-ver 15s cubic-bezier(0.19, 1, 0.22, 1) infinite both;
}

.logo2 {
  animation: rotate-in-ver2 15s cubic-bezier(0.19, 1, 0.22, 1) infinite both;
}

.logo3 {
  animation: rotate-in-ver3 15s cubic-bezier(0.19, 1, 0.22, 1) infinite both;
}

.logo-container {
  align-items: center;
  display: flex;
  flex-direction: column;
}

.logo-letters {
  filter: drop-shadow(2px 2px 3px #2a2a2a);
}

.profile {
  align-items: center;
  display: flex;
  flex-direction: column;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  margin-bottom: 20px;
  text-align: center;
}

.profile-name {
  margin-bottom: 5px;
}

.profile-photos {
  border-radius: 50%;
  height: 200px;
  margin-bottom: 10px;
  object-fit: cover;
  width: 200px;
}

.profiles-container {
  display: flex;
  flex-wrap: wrap;
  gap: 100px;
  justify-content: space-around;
}

.slide {
  align-items: center;
  display: flex;
  height: 100vh;
  justify-content: center;
  scroll-snap-align: start;
  width: 100%;
}

.slide:nth-child(1),
.slide:nth-child(2),
.slide:nth-child(3) {
  background-color: #f4f3f7;
}

.slide:nth-child(3) {
  flex-direction: column;
}

.slide:nth-child(1).dark,
.slide:nth-child(2).dark,
.slide:nth-child(3).dark {
  background-color: #415a77;
}

.slidePage2 {
  animation: fadeInUp 1.5s;
  border-radius: 10px;
  box-shadow: 5px 2.5px 22.5px -7.5px #2d3f54;
  display: block;
  height: 100%;
  margin-left: 50px;
  padding: 20px;
  width: 100%;
}

.slidePage2.active {
  display: block;
  opacity: 1;
}

.slide2_Background {
  animation: slideUp 3.5s ease-out forwards 1.5s;
  font-size: 65px;
  position: relative;
  z-index: 1;
}

.team-header {
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  font-size: 2rem;
  margin-bottom: 80px;
  text-align: center;
  width: 100%;
}

/* Animations */
@keyframes bounce-in-top {
  0% {
    -webkit-transform: translateY(-500px);
    transform: translateY(-500px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
    opacity: 0;
  }
  38% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
    opacity: 1;
  }
  55% {
    -webkit-transform: translateY(-65px);
    transform: translateY(-65px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  72% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  81% {
    -webkit-transform: translateY(-28px);
    transform: translateY(-28px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  90% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
  95% {
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
    -webkit-animation-timing-function: ease-in;
    animation-timing-function: ease-in;
  }
  100% {
    -webkit-transform: translateY(0);
    transform: translateY(0);
    -webkit-animation-timing-function: ease-out;
    animation-timing-function: ease-out;
  }
}

@keyframes fadeInUp {
  0% {
    opacity: 0;
    transform: translateY(50vw);
  }
  5% {
    opacity: 1;
    transform: translateY(25vw);
  }
  20% {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes rotate-in-ver {
  0%,
  21.05% {
    opacity: 0;
    -webkit-transform: rotateY(360deg);
    transform: rotateY(360deg);
  }
  21.05% {
    opacity: 1;
    -webkit-transform: rotateY(0deg);
    transform: rotateY(0deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateY(0deg);
    transform: rotateY(0deg);
  }
}

@keyframes rotate-in-ver2 {
  0%,
  21.05% {
    opacity: 0;
    -webkit-transform: rotateX(360deg);
    transform: rotateX(360deg);
  }
  21.05% {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateX(0deg);
    transform: rotateX(0deg);
  }
}

@keyframes rotate-in-ver3 {
  0%,
  21.05% {
    opacity: 0;
    -webkit-transform: rotateX(360deg) rotateY(360deg);
    transform: rotateX(360deg) rotateY(360deg);
  }
  21.05% {
    opacity: 1;
    -webkit-transform: rotateX(0deg) rotateY(0deg);
    transform: rotateX(0deg) rotateY(0deg);
  }
  100% {
    opacity: 1;
    -webkit-transform: rotateX(0deg) rotateY(0deg);
    transform: rotateX(0deg) rotateY(0deg);
  }
}

@keyframes slideUp {
  from {
    transform: translateY(300%);
  }
  to {
    transform: translateY(0);
  }
}

/* Properties starting with # */
#dark-mode-switch-root {
  box-sizing: border-box;
  color: rgba(100, 100, 100, 0.87);
  display: flex;
  flex-shrink: 0;
  height: 34px;
  letter-spacing: 0.15008px;
  line-height: 24px;
  overflow: hidden;
  padding: 7px;
  position: relative;
  text-size-adjust: 100%;
  vertical-align: middle;
  width: 62px;
  z-index: 0;
  -webkit-font-smoothing: antialiased;
}

#dark-mode-switch-root * {
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: transparent;
  user-select: none;
  left: 0;
  top: 0;
}

#dark-mode-switch-root #switch-base {
  align-items: center;
  appearance: none;
  background-color: transparent;
  box-sizing: border-box;
  color: rgb(255, 255, 255);
  cursor: pointer;
  display: flex;
  height: 32px;
  justify-content: center;
  margin: 1px;
  outline: none;
  padding: 0;
  position: absolute;
  text-decoration: none;
  transition: left 0.15s cubic-bezier(0.4, 0, 0.44, 1),
    transform 0.15s cubic-bezier(0.4, 0, 0.44, 1);
  width: 32px;
  z-index: 1;
}

#dark-mode-switch-root #switch-base.dark {
  transform: translateX(6px);
}

#dark-mode-switch-root #switch-thumb {
  background-color: rgb(0, 30, 60);
  background-image: url('../../assets/dark-mode.svg');
  background-position: center;
  background-repeat: no-repeat;
  border-radius: 50%;
  box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 1px -1px,
    rgba(0, 0, 0, 0.14) 0px 1px 1px 0px, rgba(0, 0, 0, 0.12) 0px 1px 3px 0px;
  box-sizing: border-box;
  color: rgb(255, 255, 255);
  content: '';
  cursor: pointer;
  display: block;
  height: 32px;
  letter-spacing: 0.15008px;
  line-height: 24px;
  position: 'absolute';
  text-size-adjust: 100%;
  width: 32px;
  width: 100%;
  height: '100%';
}

#dark-mode-switch-root #switch-thumb.dark {
  background-color: #e0e1dd;
  background-image: url('../../assets/light-mode.svg');
}

#dark-mode-switch-root #switch-track {
  background-color: #cecece;
  border-radius: 10px;
  box-sizing: border-box;
  color: rgba(217, 208, 199, 0.87);
  display: block;
  height: 20px;
  letter-spacing: 0.15008px;
  line-height: 24px;
  opacity: 1;
  text-size-adjust: 100%;
  transition: opacity 0.15s cubic-bezier(0.4, 0, 0.44, 1),
    background-color 0.15s cubic-bezier(0.4, 0, 0.44, 1);
  width: 48px;
  z-index: -1;
}

#dark-mode-switch-root #switch-track.dark {
  background-color: #aab4be;
}

#dark-mode-switch-root input {
  appearance: auto;
  background-color: transparent;
  border: none;
  box-sizing: border-box;
  color: rgb(77, 77, 77);
  cursor: pointer;
  display: block;
  font-family: Arial;
  font-size: 13.3333px;
  height: 32px;
  left: -32px;
  margin: 0px;
  opacity: 0;
  outline: none;
  padding: 0px;
  position: absolute;
  text-align: start;
  width: 96px;
  z-index: 1;
}

#login,
#signup {
  background: none;
  border: none;
  color: var(--text);
  cursor: pointer;
  display: inline-block;
  font-family: 'Baloo Bhaijaan 2', sans-serif;
  font-size: 1.2rem;
  font-weight: bold;
  margin-right: 15px;
  padding: 5px 20px;
  position: relative;
  text-decoration: none;
}

#login::after,
#signup::after {
  background: var(--text);
  bottom: -10px;
  content: '';
  display: block;
  height: 2px;
  left: 0;
  margin: auto;
  position: absolute;
  right: 0;
  transition: width 0.3s ease-in-out;
  width: 0;
}

#login:hover::after,
#signup:hover::after {
  width: 90%;
}

